[fix] active step color and work-flow-box position on mobile

--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -15,7 +15,7 @@ $beige-l: #F7F4E8;
 $gold-l: #f4c684;
 $pink-l: #ea73a1;
 $green-l: #17c9a7;
-$blue-l: #42a5f5;
+$blue-l: #387de5;
 $dark-grey-l: #586063;
 
 //Dark
